<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_details_pc_requirements_title_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc_requirements"
        android:textColor="@color/gray_500"
        android:textSize="18sp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_details_pc_requirements_minimum_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum"
        android:textColor="@color/gray_500"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_details_pc_requirements_title_view_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/game_details_pc_requirement_recommended_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended"
        android:textColor="@color/gray_500"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_details_pc_requirements_minimum_view_id" />

</androidx.constraintlayout.widget.ConstraintLayout>